<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTintMode="screen"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="ADD TASK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="601dp"
        android:text="My Task"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="ALL TASK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/task3" />

    <Button
        android:id="@+id/task1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="371dp"
        android:text="Task One"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/task2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="371dp"
        android:text="Task Two"
        app:layout_constraintStart_toEndOf="@+id/task1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/task3"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="9dp"
        android:text="Task Three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/task2"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView23" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="8dp"
        android:text="Setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView23"
        android:layout_width="match_parent"
        android:layout_height="209dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:scrollbarSize="1dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:soundEffectsEnabled="false"
        android:transitionGroup="false"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/signoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="168dp"
        android:text="SignOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView23" />

</androidx.constraintlayout.widget.ConstraintLayout>